packages/beff-wasm/fixtures/errors/cannot-resolve-with-comments/router.ts
// A
export default {
  // B
  [`/hello`]: {
    // C
    get: async (): Promise<ThisDoesNotExist> => {
      // D
      return "test";
    },
  },
};
